--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,13 @@ dependencies:
   flutter:
     sdk: flutter
   kiosk_mode: ^0.1.3+1
+  screen: ^0.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
